--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Attempt to implement the rdf-canon algorithm in TypeScript",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/ts-node test.ts"
+    "test": "./node_modules/.bin/ts-node tester/main.ts"
   },
   "keywords": [
     "RDF",
@@ -13,17 +13,19 @@
   "author": "Ivan Herman <ivan@w3.org> (https://www.w3.org/People/Ivan/)",
   "license": "W3C-20150513",
   "dependencies": {
-    "@types/n3": "^1.10.4",
     "@types/node": "^18.11.9",
     "@types/rdf-js": "^4.0.2",
-    "n3": "^1.16.3",
     "rdf-js": "^4.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
+    "@types/commander": "^2.12.2",
+    "@types/n3": "^1.10.4",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
-    "eslint": "^8.27.0"
+    "commander": "^9.4.1",
+    "eslint": "^8.27.0",
+    "n3": "^1.16.3"
   }
 }
