--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/node": "^18.11.9",
     "@types/rdf-js": "^4.0.2",
+    "array-permutation": "^0.2.0",
     "rdf-js": "^4.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
