Rely on standard Datasets and factories

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     "include": [
         "lib/**/*",
         "index.ts"
-    ],
+, "Attic/toquad.ts"    ],
     "exclude": [
         "example/**/*",
         "tester/**/*",
