--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "test": "./node_modules/.bin/ts-node tester/main.ts",
-    "doc": "./node_modules/.bin/typedoc index.ts lib/*",
+    "docs": "./node_modules/.bin/typedoc index.ts lib/*",
     "dist": "tsc"
   },
   "keywords": [
