--- a/package.json
+++ b/package.json
@@ -34,18 +34,18 @@
   "license": "W3C-20150513",
   "dependencies": {
     "@tpluscode/rdf-string": "^0.2.26",
-    "@types/node": "^18.11.9",
     "@types/rdf-js": "^4.0.2",
     "array-permutation": "^0.2.0",
-    "rdf-js": "^4.0.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "rdf-js": "^4.0.2"
   },
   "devDependencies": {
+    "@types/node": "^18.11.9",
     "@types/commander": "^2.12.2",
     "@types/n3": "^1.10.4",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4",
     "commander": "^9.4.1",
     "eslint": "^8.27.0",
     "n3": "^1.16.3",
