--- a/package.json
+++ b/package.json
@@ -40,16 +40,17 @@
     "rdf-js": "^4.0.2"
   },
   "devDependencies": {
-    "@types/node": "^18.11.9",
     "@types/commander": "^2.12.2",
     "@types/n3": "^1.10.4",
+    "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.4",
     "commander": "^9.4.1",
     "eslint": "^8.27.0",
     "n3": "^1.16.3",
-    "typedoc": "^0.23.21"
+    "ts-node": "^10.9.1",
+    "typedoc": "^0.23.21",
+    "typescript": "^4.8.4",
+    "yaml": "^2.2.1"
   }
 }
