--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rdf-c14n",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "URDNA2015 RDF Canonicalization Algorithm Implementation in TypeScript",
   "homepage": "https://github.com/iherman/rdfjs-c14n",
   "repository": {
@@ -37,7 +37,8 @@
     "@tpluscode/rdf-string": "^0.2.26",
     "@types/rdf-js": "^4.0.2",
     "array-permutation": "^0.2.0",
-    "rdf-js": "^4.0.2"
+    "rdf-js": "^4.0.2",
+    "yaml": "^2.2.1"
   },
   "devDependencies": {
     "@types/commander": "^2.12.2",
@@ -50,7 +51,6 @@
     "n3": "^1.16.3",
     "ts-node": "^10.9.1",
     "typedoc": "^0.23.21",
-    "typescript": "^4.8.4",
-    "yaml": "^2.2.1"
+    "typescript": "^4.8.4"
   }
 }
