--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,6 +43,7 @@
         "categorizeByGroup": true,
         "gitRemote": "origin",
         "hideGenerator": true,
+        "sort" : ["static-first","visibility"],
         "name" : "Implementation of the RDF Canonicalization algorithm URDNA2015"
     }
 }
