Syntax error in package.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://github.com/iherman/rdfjs-c14n",
   "repository": {
     "type": "git",
-    "url": "ttps://github.com/iherman/rdfjs-c14n"
+    "url": "https://github.com/iherman/rdfjs-c14n"
   },
   "bugs": {
     "url": "https://github.com/iherman/rdfjs-c14n/issues"
