--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rdfjs-c14n",
   "version": "1.0.4",
   "date": "2013-02-11",
-  "description": "RDF Canonicalization Algorithm URDNA2015 Implementation in TypeScript, relying on the RDF-JS interfaces",
+  "description": "Implementation in Typescript of the RDF Canonicalization Algorithm URDNA2015, relying on the RDF/JS interfaces",
   "homepage": "https://github.com/iherman/rdfjs-c14n",
   "repository": {
     "type": "git",
