Rename of the algorithm to RDFC 1.0

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,6 +44,6 @@
         "gitRemote": "origin",
         "hideGenerator": true,
         "sort" : ["static-first","visibility"],
-        "name" : "Implementation of the RDF Canonicalization algorithm URDNA2015"
+        "name" : "Implementation of the RDF Canonicalization algorithm RDFC-1.0"
     }
 }
