Removed the node-dependencies
This means:

- Instead of using the build-in crypto module for hashing, the `crypto-js` library is used. Although it has a slightly smaller set of available hashing functions, that is not really important for RDFC10 (which, formally, is based on sha256, and everything else is just a cherry on the cake)

- The function that allows the user to set some configuration data via environment variables and/or configuration files has been removed from the core. There is now a separate 'extras' directory on the repository which has this function as a callback example that the application developer can use, and the general structure only relies on callback. The callback itself is `node.js` based, others may want to come up with alternatives for, e.g., `deno` or a browser.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     },
     "typesRoots": ["node_modules/@types"],
     "include": ["lib/**/*", "index.ts"],
-    "exclude": ["example/**/*", "tester/**/*", "Attic/**/*"],
+    "exclude": ["extras/**/*", "example/**/*", "tester/**/*", "Attic/**/*"],
     "typedocOptions": {
         "excludeExternals": true,
         "excludePrivate": true,
