--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rdfjs-c14n",
   "version": "2.0.3",
-  "date": "2013-07-05",
+  "date": "2013-07-11",
   "description": "Implementation in Typescript of the RDF Canonicalization Algorithm RDFC-1.0, on top of the RDF/JS interfaces",
   "homepage": "https://github.com/iherman/rdfjs-c14n",
   "repository": {
@@ -15,7 +15,7 @@
     "test": "./node_modules/.bin/ts-node testing/run/main.ts",
     "hash": "./node_modules/.bin/ts-node testing/run/hash.ts",
     "docs": "./node_modules/.bin/typedoc index.ts lib/*",
-    "dist": "tsc"
+    "dist": "tsc; (cd extras; tsc nodeConfiguration.ts)"
   },
   "keywords": [
     "RDF",
