--- a/package.json
+++ b/package.json
@@ -38,11 +38,10 @@
     "@tpluscode/rdf-string": "^0.2.27",
     "array-permutation": "^0.2.0",
     "n3": "^1.16.3",
-    "yaml": "^2.2.1"
+    "yaml": "^2.2.1",
+    "@rdfjs/types": "^1.1.0"
   },
   "devDependencies": {
-    "rdf-js": "^4.0.2",
-    "@rdfjs/types": "^1.1.0",
     "@types/commander": "^2.12.2",
     "@types/n3": "^1.10.4",
     "@types/node": "^20.2.5",
