--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
   "author": "Ivan Herman <ivan@w3.org> (https://www.w3.org/People/Ivan/)",
   "license": "W3C-20150513",
   "dependencies": {
+    "@rdfjs/types": "^1.1.0",
     "@tpluscode/rdf-string": "^0.2.27",
     "array-permutation": "^0.2.0",
     "n3": "^1.16.3",
-    "yaml": "^2.2.1",
-    "@rdfjs/types": "^1.1.0"
+    "yaml": "^2.2.1"
   },
   "devDependencies": {
     "@types/commander": "^2.12.2",
