--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rdfjs-c14n",
-  "version": "3.0.1",
+  "version": "3.1.0",
   "date": "2024-02-07",
   "description": "Implementation in Typescript of the RDF Canonicalization Algorithm RDFC-1.0, on top of the RDF/JS interfaces",
   "homepage": "https://github.com/iherman/rdfjs-c14n",
@@ -35,11 +35,11 @@
   "author": "Ivan Herman <ivan@w3.org> (https://www.w3.org/People/Ivan/)",
   "license": "W3C-20150513",
   "dependencies": {
+    "@rdfjs/types": "^1.1.0",
     "@tpluscode/rdf-string": "^0.2.27",
     "array-permutation": "^0.2.0",
     "n3": "^1.16.3",
-    "yaml": "^2.2.1",
-    "@rdfjs/types": "^1.1.0"
+    "yaml": "^2.2.1"
   },
   "devDependencies": {
     "@types/commander": "^2.12.2",
