--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rdfjs-c14n",
-  "version": "3.1.0",
-  "date": "2024-02-07",
+  "version": "3.1.1",
+  "date": "2024-02-12",
   "description": "Implementation in Typescript of the RDF Canonicalization Algorithm RDFC-1.0, on top of the RDF/JS interfaces",
   "homepage": "https://github.com/iherman/rdfjs-c14n",
   "repository": {
@@ -36,8 +36,8 @@
   "license": "W3C-20150513",
   "dependencies": {
     "@rdfjs/types": "^1.1.0",
-    "@tpluscode/rdf-string": "^0.2.27",
     "array-permutation": "^0.2.0",
+    "event-emitter-promisify": "^1.1.0",
     "n3": "^1.16.3",
     "yaml": "^2.2.1"
   },
