--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "test": "./node_modules/.bin/ts-node testing/run/main.ts",
     "hash": "./node_modules/.bin/ts-node testing/run/hash.ts",
+    "manual": "./node_modules/.bin/ts-node testing/run/manual.ts",
     "docs": "./node_modules/.bin/typedoc index.ts lib/*",
     "dist": "tsc; (cd extras; tsc nodeConfiguration.ts); (cd lib; /bin/rm config.js)"
   },
