--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint": "^8.42.0",
     "ts-node": "^10.9.1",
     "typedoc": "^0.24.8",
+    "typedoc-theme-hierarchy": "^4.1.2",
     "typescript": "^5.1.3"
   }
 }
