--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "test": "./node_modules/.bin/ts-node testing/run/main.ts",
+    "gtest": "./node_modules/.bin/ts-node testing/run/generator.ts",
     "hash": "./node_modules/.bin/ts-node testing/run/hash.ts",
     "manual": "./node_modules/.bin/ts-node testing/run/manual.ts",
     "docs": "./node_modules/.bin/typedoc index.ts lib/*",
